swagger doc for transaction controller